--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical">
 
     <TextView
-        android:layout_width="120dp"
-        android:layout_height="72dp"
-        android:text="내손안에 키오스크 어플"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="내 손안에 키오스크"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="681dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_cafePart"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="카페"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_foodPart"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="음식점"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_moviePart"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="영화관"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_martPart"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="마트"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="30dp"
+            android:text="설정"
+            android:textSize="30sp" />
+    </LinearLayout>
+
+</LinearLayout>
