--- a/app/src/main/res/layout/activity_choose_movie.xml
+++ b/app/src/main/res/layout/activity_choose_movie.xml
@@ -1,9 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChooseMovieActivity">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="영화관을 고르세요."
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="681dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btn_CGV"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/drawable_resize_cgvlogo"
+            android:drawablePadding="30dp"
+            android:paddingTop="30dp"
+            android:text="씨지브이"
+            android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_MegaBox"
+            android:layout_marginTop="10dp"
+            android:layout_width="300dp"
+            android:layout_height="104dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:drawablePadding="30dp"
+            android:paddingTop="30dp"
+            android:drawableTop="@drawable/drawable_resize_megaboxlogo"
+            android:text="메가박스"
+            android:textSize="30sp" />
+
+        <TextView
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text=" "
+            android:textSize="40sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+</LinearLayout>
