--- a/app/src/main/res/layout/activity_setting_text_size.xml
+++ b/app/src/main/res/layout/activity_setting_text_size.xml
@@ -18,34 +18,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="681dp"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical">
 
         <Button
             android:id="@+id/btn_fontSmallSize"
-            android:layout_width="300dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:backgroundTint="#D1D0D0"
+            android:textColor="#000000"
             android:text="작게"
             android:textSize="30sp" />
 
         <Button
             android:id="@+id/btn_fontNormalSize"
-            android:layout_width="300dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:backgroundTint="#D1D0D0"
+            android:textColor="#000000"
             android:text="보통"
-            android:textSize="30sp" />
+            android:textSize="45sp" />
 
         <Button
             android:id="@+id/btn_fontBigSize"
-            android:layout_width="300dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:backgroundTint="#D1D0D0"
+            android:textColor="#000000"
             android:text="크게"
-            android:textSize="30sp" />
+            android:textSize="60sp" />
 
 
 
