일단 충돌 안나게 올려봅니당..

--- a/app/src/main/res/layout/dictionary.xml
+++ b/app/src/main/res/layout/dictionary.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="외국어 사전111"
+            android:text="외국어 사전"
             android:textStyle="bold"
             android:textSize="45dp" />
 
