--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <TextView
@@ -65,6 +66,7 @@
             android:textStyle="bold"
             android:textSize="30sp" />
 
+
         <Button
             android:id="@+id/btn_setting"
             android:layout_width="100dp"
@@ -77,6 +79,15 @@
             android:text="설정"
             android:textColor="#000000"
             android:textSize="20sp" />
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navtigation"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@android:color/white"
+            app:menu="@menu/navigation"/>
     </LinearLayout>
 
 </LinearLayout>
