--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <TextView
@@ -80,14 +81,30 @@
             android:textColor="#000000"
             android:textSize="20sp" />
 
-
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navtigation"
-            android:layout_alignParentBottom="true"
+            android:id="@+id/bottomNavi"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@android:color/white"
-            app:menu="@menu/navigation"/>
+            android:layout_height="wrap_content"
+            app:itemBackground="@android:color/white"
+            app:itemIconTint="#000000"
+            app:itemTextColor="#000000"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/navigation"
+            tools:layout_editor_absoluteX="16dp"/>
+
+        <FrameLayout
+            android:id="@+id/Main_Frame"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavi"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+        </FrameLayout>
+
+
+
     </LinearLayout>
 
 </LinearLayout>
