--- a/app/src/main/res/layout/activity_choose_func.xml
+++ b/app/src/main/res/layout/activity_choose_func.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
@@ -22,7 +23,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_voiceTrue"
+            android:id="@+id/btn_studywithme"
             android:layout_width="300dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
@@ -33,7 +34,7 @@
             android:textSize="50sp" />
 
         <Button
-            android:id="@+id/btn_voiceFalse"
+            android:id="@+id/btn_followme"
             android:layout_width="300dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
