--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,6 +14,7 @@
                 android:layout_marginLeft="20dp"
                 android:textStyle="bold"
                 android:layout_marginTop="45dp"
+                android:textColor="@color/black"
                 android:text="사전이름" />
 
             <TextView
