--- a/app/src/main/res/layout/activity_study_mac1.xml
+++ b/app/src/main/res/layout/activity_study_mac1.xml
@@ -40,6 +40,7 @@
             app:itemBackground="@android:color/white"
             app:itemIconTint="#000000"
             app:itemTextColor="#000000"
+            app:labelVisibilityMode="labeled"
             app:menu="@menu/navigation"
             tools:layout_editor_absoluteX="16dp" />
 
