[add]mega_follow_activities

--- a/app/src/main/res/drawable/drawable_resizecoffeebean.xml
+++ b/app/src/main/res/drawable/drawable_resizecoffeebean.xml
@@ -2,5 +2,5 @@
     <item
         android:width="100dp"
         android:height="100dp"
-        android:drawable="@drawable/coffeebeanlogo2" />
+        android:drawable="@drawable/megalogo" />
 </layer-list>
