--- a/app/src/main/res/layout/activity_mega_followcoffee5.xml
+++ b/app/src/main/res/layout/activity_mega_followcoffee5.xml
@@ -11,9 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="카페를 고르세요."
+        android:text="어떤 메뉴를\n주문하시겠습니까?"
         android:textSize="40sp"
         android:textStyle="bold" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/btn_CoffeeBean"
+            android:id="@+id/btn_mega5_menu_1"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -29,24 +30,28 @@
             android:drawableTop="@drawable/drawable_resizecoffeebean"
             android:drawablePadding="30dp"
             android:paddingTop="30dp"
-            android:text="메가커피"
+            android:text="어쩌구"
+            android:backgroundTint="#D8D3FF"
+            android:textColor="#000000"
             android:textSize="30sp" />
 
         <Button
-            android:id="@+id/btn_Hollys"
-            android:layout_marginTop="5dp"
+            android:id="@+id/btn_mega5_menu_2"
+            android:layout_marginTop="10dp"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:drawablePadding="30dp"
             android:paddingTop="30dp"
-            android:drawableTop="@drawable/drawable_resizehollys"
-            android:text="할리스"
+            android:drawableTop="@drawable/drawable_resizecoffeebean"
+            android:text="저쩌구"
+            android:backgroundTint="#D8D3FF"
+            android:textColor="#000000"
             android:textSize="30sp" />
 
         <TextView
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
