--- a/app/src/main/res/layout/activity_study_mega4.xml
+++ b/app/src/main/res/layout/activity_study_mega4.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".StudyMega4">
 
     <Button
-        android:id="@+id/btn_where"
+        android:id="@+id/btn_mega4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textSize="55sp"
-        android:gravity="center"
-        android:text="두번째! \n어디서 먹을지\n 선택하세요" />
+        android:background="#00ff0000" />
+
+    <ImageView
+        android:id="@+id/imageView_4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/mega4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
