--- a/app/src/main/res/layout/activity_study_mega3.xml
+++ b/app/src/main/res/layout/activity_study_mega3.xml
@@ -6,15 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".StudyMega3">
 
-    <Button
-        android:id="@+id/btn_mega3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00ff0000" />
-
-    <ImageView
-        android:id="@+id/imageView_3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ImageButton
+        android:id="@+id/btnMega3"
+        android:layout_width="0dp"
+        android:layout_height="640dp"
+        android:layout_marginBottom="0dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mega3" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:orientation="horizontal"
+        android:paddingBottom="0sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnMega3">
+
+        <Button
+            android:id="@+id/btn_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#E8BABA"
+            android:textColor="#000000"
+            android:text="영상" />
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#E8BABA"
+            android:textColor="#000000"
+            android:text="설정" />
+
+        <Button
+            android:id="@+id/btn_dic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#E8BABA"
+            android:textColor="#000000"
+            android:text="사전" />
+
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:backgroundTint="#E8BABA"
+            android:textColor="#000000"
+            android:text="뒤로" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
