--- a/app/src/main/res/layout/activity_mega_light_coffee1.xml
+++ b/app/src/main/res/layout/activity_mega_light_coffee1.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyMega10">
-    <ImageButton
-        android:id="@+id/btnMega10"
+    android:background="@drawable/mega1"
+    tools:context=".StudyMega1">
+
+
+    <Button
+        android:id="@+id/btnMega1"
         android:layout_width="0dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="490dp"
+        android:backgroundTint="#48FFEB3B"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mega10" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -29,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMega10">
+        app:layout_constraintTop_toBottomOf="@+id/btnMega1">
 
         <Button
             android:id="@+id/btn_video"
@@ -37,8 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="영상" />
+            android:text="영상"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_setting"
@@ -46,8 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="설정" />
+            android:text="설정"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_dic"
@@ -55,8 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="사전" />
+            android:text="사전"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_back"
@@ -64,7 +66,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="뒤로" />
+            android:text="뒤로"
+            android:textColor="#000000" />
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
