--- a/app/src/main/res/layout/activity_mega_light_coffee8.xml
+++ b/app/src/main/res/layout/activity_mega_light_coffee8.xml
@@ -4,32 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyMega10">
-    <ImageButton
-        android:id="@+id/btnMega10"
+    tools:context=".StudyMega11">
+
+    <ImageView
+        android:id="@+id/imageMega11"
         android:layout_width="0dp"
-        android:layout_height="230dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="100dp"
+        android:layout_height="490dp"
+        android:layout_marginBottom="0dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mega10" />
+        app:srcCompat="@drawable/mega11" />
+
+    <Button
+        android:id="@+id/btnMega11"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="#4DFFEB3B"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintLeft_toLeftOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.938" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
         android:orientation="horizontal"
         android:paddingBottom="0sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnMega10">
+        app:layout_constraintTop_toBottomOf="@+id/btnMega11">
 
         <Button
             android:id="@+id/btn_video"
@@ -37,8 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="영상" />
+            android:text="영상"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_setting"
@@ -46,8 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="설정" />
+            android:text="설정"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_dic"
@@ -55,8 +66,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="사전" />
+            android:text="사전"
+            android:textColor="#000000" />
 
         <Button
             android:id="@+id/btn_back"
@@ -64,7 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="#E8BABA"
-            android:textColor="#000000"
-            android:text="뒤로" />
+            android:text="뒤로"
+            android:textColor="#000000" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
